--- a/index.html
+++ b/index.html
@@ -1,8 +1,32 @@
+<!DOCTYPE html>
 <html>
-    <head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resource Project Page</title>
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
+        integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/trianglify/2.0.0/trianglify.min.js"></script>
+    <link rel="stylesheet" href="utils/css/normalize.css"></link>
+    <link rel="stylesheet" href="utils/css/main.css"></link>
+    </link>
+</head>
+
+<body class="background-image">
+    <header>
+        <!-- <div class="stripes" aria-hidden=true>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div> -->
+        <div class="video centerContent">
         
-    </head>
-    <body>
-        <img src="4bce3i2.gif" alt="crayfish">
-    </body>
+    </div>
+    </header>
+</body>
+
 </html>
