--- a/index.html
+++ b/index.html
@@ -14,17 +14,30 @@
     </link>
 </head>
 
-<body class="background-image">
+<body class="">
     <header>
-        <!-- <div class="stripes" aria-hidden=true>
+        <div class="stripes" aria-hidden=true>
             <span></span>
             <span></span>
             <span></span>
             <span></span>
             <span></span>
-        </div> -->
-        <div class="video centerContent">
-        
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+  
+        <div class=" video centerContent">
+            <img class="largeImage" src="images/4bce3i2.gif" alt="crayfish">
     </div>
     </header>
 </body>
