--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+
+    <meta name="title" content="Solar Kaboom">
+    <meta name="description" content="solar kaboom">
+    <meta name="keywords" content="solar,kaboom">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
     <title>Solar Kaboom</title>
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
         integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous">
