--- a/index.html
+++ b/index.html
@@ -21,32 +21,16 @@
     </link>
 </head>
 
-<body class="">
-    <header>
-        <div class="stripes" aria-hidden=true>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-  
-        <div class=" video centerContent">
-            <img class="largeImage" src="images/4bce3i2.gif" alt="crayfish">
-    </div>
-    </header>
+<body class="black">
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <img class=" center largeImage" src="images/4bce3i2.gif" alt="crayfish">    
 </body>
 
 </html>
