center title, image center

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <title>Solar Kaboom</title>
-    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
-        integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous">
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/trianglify/2.0.0/trianglify.min.js"></script>
     <link rel="stylesheet" href="utils/css/normalize.css"></link>
@@ -22,6 +21,10 @@
 </head>
 
 <body class="black">
+    <header class="header">
+            <h1 class="text-center">Solar Kaboom</h1>
+    </header>
+    <main class="center">
     <br/>
     <br/>
     <br/>
@@ -30,7 +33,9 @@
     <br/>
     <br/>
     <br/>
-    <img class=" center largeImage" src="images/4bce3i2.gif" alt="crayfish">    
+    <img class="center largeImage" src="images/4bce3i2.gif" alt="crayfish">    
+</main>
+<footer class="footer"></footer>
 </body>
 
 </html>
