--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="title" content="Solar Kaboom">
     <meta name="description" content="solar kaboom">
-    <meta name="keywords" content="solar,kaboom">
+    <meta name="keywords" content="solar,kaboom, solar kaboom, solar kaboom inc">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <title>Solar Kaboom</title>
@@ -22,7 +22,7 @@
 
 <body class="black">
     <header class="header">
-            <h1 class="text-center">Solar Kaboom</h1>
+            <h1 class="text-center">Solar Kaboom Inc.</h1>
     </header>
     <main class="center">
     <br/>
