--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
 
     <meta name="title" content="Solar Kaboom">
-    <meta name="description" content="solar kaboom">
+    <meta name="description" content="Solar Kaboom Inc. is a grass roots movement whos goal is to place a solar panel on the sun started by young lad named Alex. He and his coleges seek to better the world through memes and renewable resources.">
     <meta name="keywords" content="solar,kaboom, solar kaboom, solar kaboom inc">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
