--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <br/>
     <br/>
     <div>
-    <img class="center largeImage" src="images/4bce3i2.gif" alt="crayfish">    
+    <img class=" largeImage" src="images/4bce3i2.gif" alt="crayfish">    
 </div>
 </main>
 <footer class="footer"></footer>
